# Filme

./: .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml  test_character.txt  test_story.txt
.github/workflows/: deploy.yml
backend/: .env  .env.example  .gitignore  call_api.py  main.py  pyproject.toml
backend/prompts/: script_prompt.txt
frontend/: .gitignore  config.example.js  config.js  index.html  script.js  style.css
